--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CryCounter">
         <activity
+            android:name=".Leaderboard"
+            android:exported="true" />
+        <activity
+            android:name=".Themes"
+            android:exported="true" />
+        <activity
+            android:name=".LogCry"
+            android:exported="true" />
+        <activity
+            android:name=".Profile"
+            android:exported="true" />
+        <activity
+            android:name=".LogInScreen"
+            android:exported="true" />
+        <activity
+            android:name=".Statistics"
+            android:exported="true" />
+        <activity
+            android:name=".SignUpPage"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
