--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ buildscript {
         google()
         mavenCentral()
         jcenter()
-        maven { url 'https://jitpack.io' }
+        //maven { url 'https://jitpack.io' }
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
