worked on stats

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CryCounter">
         <activity
+            android:name=".EntryString"
+            android:exported="true" />
+        <activity
             android:name=".SignUpProfile"
             android:exported="true" />
         <activity
