--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         google()
         mavenCentral()
         jcenter()
-        //maven { url 'https://jitpack.io' }
+        maven { url 'https://jitpack.io' }
 
     }
     dependencies {
