--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:exported="true" />
         <activity
             android:name=".Leaderboard"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".LoadingScreen" />
         <activity
             android:name=".Themes"
             android:exported="true"
