--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name=".Themes"
             android:exported="true"
             android:label="Themes"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".LoadingScreen" />
         <activity
             android:name=".LogCry"
             android:exported="true" />
@@ -32,7 +32,8 @@
             android:exported="true" />
         <activity
             android:name=".Statistics"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".LoadingScreen"/>
         <activity
             android:name=".SignUpPage"
             android:exported="true" />
